@@ -19,7 +19,7 @@
 # <texmf>/doc/generic/memoize/FILES.
 
 my $PROG = 'memoize-clean.pl';
-my $VERSION = '2024/04/02 v1.3.0';
+my $VERSION = '2024/11/24 v1.4.0';
 
 use strict;
 use Getopt::Long;
