@@ -181,7 +181,6 @@ texdirflatten/texdirflatten
 texfindpkg/texfindpkg.lua
 texdoc/texdoc.tlu
 texfot/texfot.pl
-texlive/extractbb.lua
 texlive/fmtutil-sys.sh
 texlive/fmtutil-user.sh
 texlive/fmtutil.pl
